tests/negative/resource_unsigned_underflow.ora
resource TokenUnit = u256;

contract ResourceUnsignedUnderflow {
    storage var reserve: Resource<TokenUnit>;

    pub fn bad() {
        @destroy(reserve, 1);
    }
}
